[package]
name = "subscription_nfts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription_nfts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.25.0",features=["init-if-needed"]}
mpl-token-metadata = { version="1.3.2", features = [ "no-entrypoint" ] }
anchor-spl = "0.25.0"
